WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69587
REGRESSION(
r96870
): editing/pasteboard/smart-paste-008.html fails on non-Mac
https://bugs.webkit.org/show_bug.cgi?id=69587
Summary
REGRESSION(r96870): editing/pasteboard/smart-paste-008.html fails on non-Mac
Ryosuke Niwa
Reported
2011-10-06 17:23:37 PDT
It seems like my patch regressed one test on non-Mac platforms.
Attachments
fixes the bug
(3.19 KB, patch)
2011-10-07 16:13 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Added the forgotten change log entry for LayoutTests
(3.82 KB, patch)
2011-10-07 16:15 PDT
,
Ryosuke Niwa
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
one more rebaseline
(3.19 KB, patch)
2011-10-07 21:54 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
one more correction
(12.18 KB, patch)
2011-10-07 22:17 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2011-10-06 17:23:59 PDT
GTK:
http://build.webkit.org/results/GTK%20Linux%2032-bit%20Release/r96870%20(18039)/editing/pasteboard/smart-paste-008-pretty-diff.html
Chromium Linux:
http://build.webkit.org/results/Chromium%20Linux%20Release%20(Tests)/r96870%20(24329)/editing/pasteboard/smart-paste-008-diffs.html
Ryosuke Niwa
Comment 2
2011-10-07 16:13:21 PDT
Created
attachment 110229
[details]
fixes the bug I'll remove entries from other platforms one this patch is landed.
Ryosuke Niwa
Comment 3
2011-10-07 16:15:19 PDT
Created
attachment 110230
[details]
Added the forgotten change log entry for LayoutTests
WebKit Review Bot
Comment 4
2011-10-07 17:17:29 PDT
Comment on
attachment 110230
[details]
Added the forgotten change log entry for LayoutTests
Attachment 110230
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/10000377
New failing tests: fast/events/ondragenter.html
Ryosuke Niwa
Comment 5
2011-10-07 21:54:46 PDT
Created
attachment 110255
[details]
one more rebaseline
Ryosuke Niwa
Comment 6
2011-10-07 22:17:32 PDT
Created
attachment 110257
[details]
one more correction
WebKit Review Bot
Comment 7
2011-10-07 22:57:53 PDT
Comment on
attachment 110257
[details]
one more correction
Attachment 110257
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/10006396
New failing tests: fast/events/ondragenter.html
Enrica Casucci
Comment 8
2011-10-10 14:53:39 PDT
Comment on
attachment 110257
[details]
one more correction Looks good to me.
Ryosuke Niwa
Comment 9
2011-10-10 14:57:09 PDT
Comment on
attachment 110257
[details]
one more correction Thanks for the review!
Ryosuke Niwa
Comment 10
2011-10-10 16:08:08 PDT
Comment on
attachment 110257
[details]
one more correction Clearing flags on attachment: 110257 Committed
r97102
: <
http://trac.webkit.org/changeset/97102
>
Ryosuke Niwa
Comment 11
2011-10-10 16:08:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug