REGRESSION(r96870): editing/pasteboard/smart-paste-008.html fails on non-Mac https://bugs.webkit.org/show_bug.cgi?id=69587

Reviewed by Enrica Casucci.

Source/WebCore:

Insert a space at the correct offset when startNode is a text node.

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::addSpacesForSmartReplace):

LayoutTests:

Unskip the test. Also rebaseline a test for a nbsp/sp change.

* platform/win/Skipped:
* platform/win/fast/events/ondragenter-expected.txt:


Canonical link: https://commits.webkit.org/85839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97102 268f45cc-cd09-0410-ab3c-d52691b4dbfc